 2015-05-20 15:27  asfernandes 
   M src/jrd/SimilarToMatcher.h
Fixed CORE-4740 - SIMILAR TO with quantifier {n,} in the pattern: 1) fails on 2.5 ("Invalid pattern"), 2) strange result in 3.0.

 2015-05-20 13:07  alexpeshkoff 
   M src/jrd/jrd.cpp
Fixed code disabling access to network filenames in embedded mode

 2015-05-18 16:46  alexpeshkoff 
   M src/yvalve/why.cpp
Fixed CORE-4795: fbclient executes callback function twice

 2015-05-18 16:01  alexpeshkoff 
   M src/yvalve/why.cpp
Fixed CORE-4794: isc_cancel_events returns error invalid events id (handle) (code: 335545021) if event is (no longer) queued

 2015-05-17 02:22  asfernandes 
   M src/common/classes/NoThrowTimeStamp.h
   M src/jrd/SysFunction.cpp
Postfix for CORE-4789 - Prohibit ability to cast timestamps that out of valid range to varchar.

 2015-05-15 16:11  alexpeshkoff 
   M src/remote/client/interface.cpp
   M src/yvalve/why.cpp
Fixed CORE-4756: Firebird 3 events broken

 2015-05-15 16:10  asfernandes 
   M doc/sql.extensions/README.data_types
   M doc/sql.extensions/README.keywords
   M src/dsql/BoolNodes.cpp
   M src/dsql/BoolNodes.h
   M src/dsql/Parser.h
   M src/dsql/parse.y
1) Improvement CORE-4791 - Make INSERTING/UPDATING/DELETING reserved words to fix ambiguity with boolean expresions.
2) Fixed CORE-4735 -  Expression 'where bool_field IS true | false' should also use index as 'where bool_field = true | false' (if such index exists).

 2015-05-15 16:08  alexpeshkoff 
   M src/common/classes/RefCounted.h
Make ref.counted pointer recursive-call safe

 2015-05-14 10:04  alexpeshkoff 
   M src/dsql/dsql.cpp
Postfix for CORE-4785

 2015-05-13 15:19  asfernandes 
   M src/jrd/SysFunction.cpp
Fixed CORE-4789 - Prohibit ability to cast timestamps that out of valid range to varchar.

 2015-05-13 13:24  alexpeshkoff 
   M src/dsql/dsql.cpp
Fixed CORE-4785: Bad packet of op_execute kills the server

 2015-05-12 12:17  alexpeshkoff 
   M src/remote/inet.cpp